<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:ignore="HardcodedText">

    <!--
    Trick for Iconics: icon name is specified in contentDescription, a Drawable
    object is created programmatically at runtime and set into icon.
     -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overall"
            android:checked="true"
            android:contentDescription="cmd_view_grid"
            android:title="@string/overall"/>
        <item
            android:id="@+id/nav_selection_modes"
            android:contentDescription="cmd_select_all"
            android:enabled="false"
            android:title="@string/selection_modes"/>
        <item
            android:id="@+id/nav_filter"
            android:contentDescription="cmd_filter_outline"
            android:enabled="false"
            android:title="@string/filter"/>
        <item
            android:id="@+id/nav_animator"
            android:contentDescription="cmd_chart_gantt"
            android:enabled="false"
            android:title="@string/animator"/>
        <item
            android:id="@+id/nav_headers_and_sections"
            android:contentDescription="cmd_sections"
            android:enabled="false"
            android:title="@string/headers_sections"/>
        <item
            android:id="@+id/nav_expandable_sections"
            android:contentDescription="cmd_expandable"
            android:enabled="false"
            android:title="@string/expandable_sections"/>
        <item
            android:id="@+id/nav_multi_level_expandable"
            android:contentDescription="cmd_expandable"
            android:enabled="false"
            android:title="@string/multi_level_expandable"/>
        <item
            android:id="@+id/nav_endless_scrolling"
            android:contentDescription="cmd_playlist_play"
            android:enabled="false"
            android:title="@string/endless_scrolling"/>
        <item
            android:id="@+id/nav_db_headers_and_sections"
            android:contentDescription="cmd_link"
            android:enabled="false"
            android:title="@string/databinding"/>
        <item
            android:id="@+id/nav_instagram_headers"
            android:contentDescription="cmd_instagram"
            android:enabled="false"
            android:title="@string/instagram_headers"/>
        <item
            android:id="@+id/nav_model_holders"
            android:contentDescription="cmd_select_inverse"
            android:enabled="false"
            android:title="@string/model_holders"/>
        <item
            android:id="@+id/nav_staggered"
            android:contentDescription="cmd_dashboard"
            android:enabled="false"
            android:title="@string/staggered_layout"/>
        <item
            android:id="@+id/nav_horizontal"
            android:contentDescription="cmd_view_column"
            android:enabled="false"
            android:title="@string/horizontal"/>

    </group>

    <item android:title="@string/special_layouts_title">
        <menu>
            <item
                android:id="@+id/nav_viewpager"
                android:contentDescription="cmd_view_carousel"
                android:enabled="false"
                android:title="@string/viewpager"/>
            <item
                android:id="@+id/nav_dialogs"
                android:contentDescription="cmd_comment"
                android:enabled="false"
                android:title="@string/dialogs"/>
            <!--<item-->
            <!--android:id="@+id/nav_switch"-->
            <!--android:enabled="false"-->
            <!--android:title="Grid Layout"-->
            <!--app:actionLayout="@layout/action_view_switch"/>-->
        </menu>
    </item>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:enabled="false"
                android:title="@string/action_settings"/>
        </menu>
    </item>

    <item android:title="@string/about_title">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:contentDescription="cmd_info"
                android:title="@string/about_title"/>
            <item
                android:id="@+id/nav_github"
                android:contentDescription="cmd_github_circle"
                android:title="@string/github"/>
        </menu>
    </item>

</menu>